# CRYENGINE

./: .gitignore  cryengine.cryengine
Code/CryEngine/Cry3DEngine/: 3DEngineRender.cpp  Brush.cpp  Brush.h  (+7 more)
Code/CryPlugins/: CMakeLists.txt
Code/CryPlugins/CryDefaultEntities/Module/: CMakeLists.txt  PluginDll.cpp  PluginDll.h
Code/CryPlugins/CryDefaultEntities/Module/DefaultComponents/Constraints/: LineConstraint.h  PlaneConstraint.h  PointConstraint.h
Code/CryPlugins/CryDefaultEntities/Module/DefaultComponents/Lights/: ProjectorLightComponent.cpp
Code/CryPlugins/CryDefaultEntities/Module/DefaultComponents/Physics/: AreaComponent.cpp  CharacterControllerComponent.h  RigidBodyComponent.cpp
Code/CryPlugins/CryDefaultEntities/Module/Legacy/Audio/: AudioAreaEntity.cpp  AudioAreaEntity.h
Code/CryPlugins/CryDefaultEntities/Module/Legacy/Geometry/: GeomEntity.cpp  GeomEntity.h
Code/CryPlugins/CryDefaultEntities/Module/Legacy/Helpers/: DesignerEntityComponent.h
Code/CryPlugins/CryDefaultEntities/Module/Legacy/Lights/: LightEntity.cpp  LightEntity.h
Code/CryPlugins/CryDefaultEntities/Module/Legacy/Triggers/: TriggerEntity.cpp  TriggerEntity.h
Code/CryPlugins/CryUQS/StdLib/stdlib/: Generators.cpp  InstantEvaluators.cpp  ItemMonitors.cpp
Engine/Config/: engine_core.thread_config
Engine/Shaders/: CMakeLists.txt  hwscripts.waf_files
Tools/CMake/: Build.cmake  BuildEngine.cmake  BuildLaunchers.cmake  CommonMacros.cmake
Tools/CryVersionSelector/: release_project.py
_WAF_/specs/: gamesdk.json  gamesdk_and_tools_qt.json  gamesdk_and_tools_qt_physx.json
(+330 files in other folders)
